# fluent-reader

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  USER_MANUAL.md  docker-compose.yml  init-letsencrypt.sh  package.json  tsconfig.json
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  api.yml  database.sql  docker-compose.yml  package.json
backend/src/: app_config.rs  auth.rs  db.rs  handlers.rs  lang.rs  main.rs  models.rs  response.rs  util.rs
backend/src/db/: mod.rs
backend/src/db/article/: mod.rs  system.rs  user.rs
backend/src/db/user/: all_article_word_data.rs  mod.rs  word_data.rs
backend/src/handlers/: mod.rs
backend/src/handlers/article/: mod.rs  system.rs
backend/src/handlers/article/user/: mod.rs  save_data.rs
backend/src/handlers/user/: all_article_word_data.rs  data.rs  mod.rs
backend/src/models/: db.rs  mod.rs  net.rs
backend/src/models/article/: db.rs  net.rs
backend/src/models/db/: all_article_word_data.rs  article.rs  mod.rs  user.rs
backend/src/models/net/: all_article_word_data.rs  article.rs  mod.rs  user.rs  user_data.rs
backend/src/models/user/: auth.rs  db.rs  mod.rs
backend/src/models/user/data/: db.rs  net.rs
backend/src/models/user/net/: auth.rs  mod.rs
backend/src/response/: article.rs  mod.rs  user.rs
data/nginx/: app.conf
frontend/: .dockerignore  .env.development  docker-compose.yml  init-letsencrypt.sh  package.json
frontend/public/: _redirects
frontend/src/: Providers.tsx  (+3 more)
public/: index.css  index.html
src/: App.tsx  Providers.tsx  i18n.js  i18n.ts  index.tsx  store.ts
(+234 files in other folders)
