[package]
name = "fluent-reader-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"

tokio-pg-mapper = "=0.1.8"
tokio-pg-mapper-derive = "=0.1.5"
deadpool-postgres = "=0.5.6"
tokio-postgres = { version = "=0.5.5", features = ["with-serde_json-1"] }

dotenv = "0.15.0"
config = "0.10.1"
log = "0.4.0"
env_logger = "0.8.2"


chrono = "0.4"
lazy_static = "1.4.0"
rand = "0.7.3"
futures = "0.3.12"
futures-util = "0.3.12"
serde = "1.0.118"
serde_json = "1.0"

rust-argon2 = "0.8"
jsonwebtoken = "7.2.0"

jieba-rs = "0.6"
unicode-segmentation = "1.7.1"

[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}
